--- a/src/components/Spinner.module.css
+++ b/src/components/Spinner.module.css
@@ -1,21 +1,29 @@
-.spinnerContainer {
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
 
-.spinner {
-  width: 6rem;
-  height: 6rem;
+
+
+/* HTML: <div class="loader"></div> */
+.loader {
+  width: 50px;
+  aspect-ratio: 1;
+  display: grid;
+  border: 4px solid #0000;
   border-radius: 50%;
-  background: conic-gradient(#0000 10%, var(--color-light--2));
-  -webkit-mask: radial-gradient(farthest-side, #0000 calc(100% - 8px), #000 0);
-  animation: rotate 1.5s infinite linear;
+  border-right-color: #25b09b;
+  animation: l15 1s infinite linear;
 }
-
-@keyframes rotate {
-  to {
-    transform: rotate(1turn);
-  }
+.loader::before,
+.loader::after {    
+  content: "";
+  grid-area: 1/1;
+  margin: 2px;
+  border: inherit;
+  border-radius: 50%;
+  animation: l15 2s infinite;
+}
+.loader::after {
+  margin: 8px;
+  animation-duration: 3s;
+}
+@keyframes l15{ 
+  100%{transform: rotate(1turn)}
 }
