Enhance project structure by adding environment variable support, refining component prop types, and improving UI responsiveness

--- a/src/components/Cities.module.css
+++ b/src/components/Cities.module.css
@@ -13,3 +13,11 @@
 .cityList::-webkit-scrollbar {
   width: 0;
 }
+
+
+@media screen and (max-width: 768px) {
+  .cityList {
+    max-height: 300px;
+    /* scrollbar-width: 10px; */
+  }
+}
