--- a/src/pages/AppLayout.module.css
+++ b/src/pages/AppLayout.module.css
@@ -1,7 +1,16 @@
 .app {
   height: 100vh;
-  padding: 2.4rem;
+  /* padding: 2.4rem; */
   overscroll-behavior-y: none;
   display: flex;
   position: relative;
+}
+
+
+
+@media screen and (max-width: 768px) { 
+  .app {
+    display: flex;
+    flex-direction: column;
+  }
 }
