--- a/src/components/CountryList.module.css
+++ b/src/components/CountryList.module.css
@@ -1,6 +1,6 @@
 .countryList {
   width: 100%;
-  height: 65vh;
+  /* height: 65vh; */
   list-style: none;
   overflow-y: auto;
   overflow-x: hidden;
@@ -9,4 +9,11 @@
   grid-template-columns: 1fr 1fr;
   align-content: start;
   gap: 1.6rem;
+}
+
+@media screen and (max-width: 768px) {
+  .cityList {
+    height: 100%;
+    max-height: 300px;
+  }
 }
