--- a/src/components/SpinnerFullPage.module.css
+++ b/src/components/SpinnerFullPage.module.css
@@ -1,5 +1,8 @@
 .spinnerFullpage {
-  margin: 2.5rem;
-  height: calc(100vh - 5rem);
+  /* margin: 2.5rem; */
+  height: 100vh;
   background-color: var(--color-dark--1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
