--- a/src/pages/Homepage.module.css
+++ b/src/pages/Homepage.module.css
@@ -5,7 +5,7 @@
       rgba(36, 42, 46, 0.8),
       rgba(36, 42, 46, 0.8)
     ),
-    url("../../public/imgs/bg.jpg");
+    url("dist/imgs/travel.jpg");
   background-size: cover;
   background-position: center;
   padding: 2.5rem 5rem;
@@ -27,7 +27,7 @@
 }
 
 .homepage h2 {
-  width: 90%;
+  width: 60%;
   font-size: 1.9rem;
   color: var(--color-light--1);
   margin-bottom: 2.5rem;
