--- a/src/pages/Login.module.css
+++ b/src/pages/Login.module.css
@@ -1,7 +1,14 @@
 .login {
   /* margin: 2.5rem; */
   padding: 2.5rem 5rem;
-  background-color: var(--color-dark--1);
+ background-image: linear-gradient(
+      rgba(36, 42, 46, 0.8),
+      rgba(36, 42, 46, 0.8)
+    ),
+    url("dist/imgs/travel.jpg");
+  background-size: cover;
+  background-position: center;
+  padding: 2.5rem 5rem;
   min-height: 100vh;
 }
 
