--- a/src/components/CountryList.module.css
+++ b/src/components/CountryList.module.css
@@ -1,19 +1,21 @@
 .countryList {
   width: 100%;
-  /* height: 65vh; */
   list-style: none;
   overflow-y: auto;
   overflow-x: hidden;
-
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-content: start;
   gap: 1.6rem;
+  padding: 0.8rem;
 }
 
 @media screen and (max-width: 768px) {
-  .cityList {
-    height: 100%;
-    max-height: 300px;
+  .countryList {
+    grid-template-columns: 1fr;
+    height: auto;
+    max-height: calc(100vh - 20rem);
+    gap: 1.2rem;
+    padding: 0.5rem;
   }
 }
