--- a/src/components/PageNav.module.css
+++ b/src/components/PageNav.module.css
@@ -2,13 +2,18 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 1rem;
 }
 
-.nav ul {
+.desktopNav {
+  display: block;
+}
+
+.desktopNav ul {
   list-style: none;
   display: flex;
   align-items: center;
-  gap: 4rem;
+  gap: 3rem;
 }
 
 .nav a:link,
@@ -31,4 +36,44 @@ a.ctaLink:visited {
   color: var(--color-dark--0);
   padding: 0.8rem 2rem;
   border-radius: 7px;
+}
+
+.signup {
+  background-color: transparent;
+  border: 1px solid;
+  padding: 0.8rem 2rem;
+  border-radius: 7px;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+@media (max-width: 768px) {
+  .nav {
+    padding: 0;
+  }
+
+  .desktopNav {
+    display: none;
+  }
+
+  /* Mobile menu styling */
+  .nav ul {
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+  }
+
+  .nav a:link,
+  .nav a:visited {
+    font-size: 1.8rem;
+  }
+
+  a.ctaLink:link,
+  a.ctaLink:visited,
+  .signup {
+    display: inline-block;
+    width: 200px;
+    text-align: center;
+    padding: 1rem 2rem;
+  }
 }
