--- a/src/components/SpinnerFullPage.module.css
+++ b/src/components/SpinnerFullPage.module.css
@@ -1,8 +1,18 @@
 .spinnerFullpage {
-  /* margin: 2.5rem; */
   height: 100vh;
+  width: 100vw;
+  position: fixed;
+  top: 0;
+  left: 0;
   background-color: var(--color-dark--1);
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 9999;
+}
+
+@media (max-width: 768px) {
+  .spinnerFullpage {
+    padding: 0 2rem;
+  }
 }
