--- a/src/pages/Homepage.module.css
+++ b/src/pages/Homepage.module.css
@@ -7,7 +7,7 @@
     url("/imgs/travel.jpg");
   background-size: cover;
   background-position: center;
-  padding: 2.5rem 5rem;
+  padding: 1.5rem 3rem
 }
 
 .homepage section {
